--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>
             <form>
             <input ng-model = "inputAddress" type = "text" id="city address" required>
-            <button ng-click= "go()" type="submit" class = "btn btn-primary btn-lg" >Search City </button>
+            <button ng-click= "renderMap()" type="submit" class = "btn btn-primary btn-lg" >Search City </button>
             </form>
         </p>
     </div>
@@ -39,7 +39,6 @@
 <script src="http://maps.google.com/maps/api/js?sensor=true&libraries=places" type="text/javascript"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
 <script src="js/app.js"></script>
-<script src="js/mapController.js"></script>
 <script src= "js/mapService.js"></script>
 <script src="js/homeController.js"></script>
 </body>
