--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>AngularJS Routing example</title>
+    <title>Neighbourhood Map</title>
     <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -26,14 +26,9 @@
 <div class="container">
     <div class="row">
         <div class="col-md-3">
-
+            <div ng-view></div>
         </div>
-        <div id="googleMap" style="width:100%;height:500px;"></div>
-        <div class="col-md-9">
-            <div ng-view>
-
-            </div>
-        </div>
+        <div class="col-md-9" id="googleMap" style="height:500px;"></div>
     </div>
 </div><!-- /.container -->
 <script src="http://maps.google.com/maps/api/js?sensor=true&libraries=places" type="text/javascript"></script>
@@ -41,5 +36,6 @@
 <script src="js/app.js"></script>
 <script src= "js/mapService.js"></script>
 <script src="js/homeController.js"></script>
+<script src="js/restaurantController.js"></script>
 </body>
 </html>
