--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
 <html lang="en">
 <head>
     <title>Neighbourhood Map</title>
-    <link href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="css/styles.css">
     <style>
         body {
             padding-top: 10px;
@@ -11,13 +14,12 @@
     </style>
 </head>
 <body ng-app="myApp">
-
 <div class = "container" ng-controller="homeController">
     <div class = "jumbotron">
         <h1>Neighbourhood Map</h1>
         <p>
             <form>
-            <input ng-model = "inputAddress" type = "text" id="city address" required>
+             <input ng-model = "inputAddress" type="text"  name="search" id="search" placeholder="Enter City Name" required>
             <button ng-click= "renderMap()" type="submit" class = "btn btn-primary btn-lg" >Search City </button>
             </form>
         </p>
@@ -31,11 +33,18 @@
         <div class="col-md-9" id="googleMap" style="height:500px;"></div>
     </div>
 </div><!-- /.container -->
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.js"></script>
 <script src="http://maps.google.com/maps/api/js?sensor=true&libraries=places" type="text/javascript"></script>
-<script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
 <script src="js/app.js"></script>
 <script src= "js/mapService.js"></script>
 <script src="js/homeController.js"></script>
 <script src="js/restaurantController.js"></script>
+
+
+
+
 </body>
 </html>
