--- a/index.html
+++ b/index.html
@@ -2,15 +2,25 @@
 <html lang="en">
 <head>
     <title>Neighbourhood Map</title>
-    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.js"></script>
+    <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+    <script src="http://maps.google.com/maps/api/js?sensor=true&libraries=places" type="text/javascript"></script>
+    <script src="js/app.js"></script>
+    <script src= "js/mapService.js"></script>
+    <script src="js/homeController.js"></script>
+    <script src="js/restaurantController.js"></script>
+    <script src="js/errorController.js"></script>
     <link rel="stylesheet" href="css/styles.css">
+
 </head>
-<body ng-app="myApp" style="background-color: black" ng-controller="homeController">
-<div class = "container" >
+<body ng-app="myApp" style="background-color: black" ng-init="init()" ng-controller="homeController">
+<div class = "container homePage" >
     <div class = "jumbotron">
-        <h1>Neighbourhood Map</h1> <br>
+        <h1>Neighbourhood Map</h1>
         <p>
         <form>
             <input ng-model = "inputAddress" type="text"  name="search" id="search" placeholder="Enter City Name" required>
@@ -18,59 +28,48 @@
         </form>
         </p>
     </div>
+    <div class="row popularMaps">
+        <div class = "mapTitle">Popular Maps</div>
+        <br>
+        <div id="myCarousel" class="carousel slide" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+            </ol>
+
+            <!-- Wrapper for slides -->
+            <div class="carousel-inner" role="listbox">
+                <div class="item active">
+                    <img src="images/new-york.PNG" alt="newYork" ng-click="loadPopularMap('new york city')">
+                </div>
+
+                <div class="item">
+                    <img src="images/chicago.PNG" alt="chicago" ng-click="loadPopularMap('chicago')">
+                </div>
+
+                <div class="item">
+                    <img src="images/san-fransisco.PNG" alt="sfo" ng-click="loadPopularMap('san fransisco')">
+                </div>
+            </div>
+
+            <!-- Left and right controls -->
+            <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
 </div>
 <div class="container">
     <div class="row">
         <div ng-view></div>
     </div>
 </div><!-- /.container -->
-
-<div class="popularMaps">
-    <div class = "popular-maps">Popular Maps</div>
-    <br>
-    <div id="myCarousel" class="carousel slide" data-ride="carousel">
-        <!-- Indicators -->
-        <ol class="carousel-indicators">
-            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-            <li data-target="#myCarousel" data-slide-to="1"></li>
-            <li data-target="#myCarousel" data-slide-to="2"></li>
-        </ol>
-
-        <!-- Wrapper for slides -->
-        <div class="carousel-inner" role="listbox">
-            <div class="item active">
-                <img src="images/new-york.PNG" alt="newYork" ng-click="loadPopularMap('new york city')">
-            </div>
-
-            <div class="item">
-                <img src="images/chicago.PNG" alt="chicago" ng-click="loadPopularMap('chicago')">
-            </div>
-
-            <div class="item">
-                <img src="images/san-fransisco.PNG" alt="sfo" ng-click="loadPopularMap('san fransisco')">
-            </div>
-        </div>
-
-        <!-- Left and right controls -->
-        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-        </a>
-        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-        </a>
-    </div>
-</div>
-
-
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
-<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.js"></script>
-<script src="http://maps.google.com/maps/api/js?sensor=true&libraries=places" type="text/javascript"></script>
-<script src="js/app.js"></script>
-<script src= "js/mapService.js"></script>
-<script src="js/homeController.js"></script>
-<script src="js/restaurantController.js"></script>
-
 </body>
 </html>
