App-Version 2.0 - Added Uber Services

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Neighbourhood Map</title>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.4/angular-route.js"></script>
@@ -14,19 +14,29 @@
     <script src="js/homeController.js"></script>
     <script src="js/restaurantController.js"></script>
     <script src="js/errorController.js"></script>
+    <script src="js/uberService.js"></script>
     <link rel="stylesheet" href="css/styles.css">
 
 </head>
-<body ng-app="myApp" style="background-color: black" ng-init="init()" ng-controller="homeController">
-<div class="container homePage">
-    <div class="jumbotron">
-        <h1>Neighbourhood Map</h1>
-        <p>
-        <form>
-            <input ng-model="inputAddress" type="text" name="search" id="search" placeholder="Enter City Name" required>
-            <button ng-click="goTo()" type="submit" class="btn btn-primary btn-lg">Search City</button>
-        </form>
-        </p>
+<body ng-app="myApp" ng-init="init()" ng-controller="homeController">
+<div class="container-fluid  homePage">
+    <div class="container-fluid">
+        <nav class="navbar navbar-default navbar-static-top">
+            <div class="navbar-header">
+                <a target="_blank" class="navbar-brand">Neighbourhood Map</a>
+            </div>
+            <div class="container" id="search-panel">
+                <ul class="nav navbar-nav navbar-right">
+                    <p>
+                    <form>
+                        <input ng-model="inputAddress" type="text" name="search" id="search" placeholder="Enter City Name"
+                               required>
+                        <button ng-click="goTo()" type="submit" class="btn btn-primary btn-sm">Search Restaurant</button>
+                    </form>
+                    </p>
+                </ul>
+            </div>
+        </nav>
     </div>
     <div class="row popularMaps">
         <div class="mapTitle">Popular Maps</div>
@@ -66,10 +76,8 @@
         </div>
     </div>
 </div>
-<div class="container">
-    <div class="row">
+<div class="container-fluid">
         <div ng-view></div>
-    </div>
 </div><!-- /.container -->
 </body>
 </html>
